--- a/waldobook/pyproject.toml
+++ b/waldobook/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = {extras = ["standard"], version = "^0.20.0"}
 SQLAlchemy = "^1.4.46"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 qrcode = {extras = ["pil"], version = "^7.3.1"}
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
