--- a/treasuremit/package.json
+++ b/treasuremit/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0",
     "next": "13.1.2",
     "node-fetch": "^3.3.0",
     "react": "18.2.0",
