--- a/waldobook/pyproject.toml
+++ b/waldobook/pyproject.toml
@@ -12,6 +12,7 @@ SQLAlchemy = "^1.4.46"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 qrcode = {extras = ["pil"], version = "^7.3.1"}
 gunicorn = "^20.1.0"
+psycopg2 = "^2.9.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
